--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,29 +6,26 @@
 
 
       <div class="eight wide column">
-        <h4 class="ui header">About</h4>
+        <h4 class="ui header">How to use</h4>
         <div class="ui link list">
-          <%= link_to "About STYLATTE", stylists_path %><br>
+          <%= link_to "Help", help_path %><br>
+          <%= link_to "Become a stylist?", stylists_path %><br>
+          More info on SNS /
           <i class="facebook icon"></i><a href="https://www.facebook.com/Stylatte-335151873516229/" target="_blank">Facebook</a>
           <i class="twitter icon"></i><br>
-          <%= link_to "Help", help_path %>
         </div>
-        <!-- 言語選択 -->
-
+        <!-- 言語選択入れる -->
       </div>
 
       <div class="eight wide column">
-
+        <h4 class="ui header">About</h4>
         <div class="ui link list">
           <%= link_to "About Us", about_path %><br>
-          <%= link_to "Terms and Conditions", users_path %><br>
+          <%= link_to "Terms and Conditions", terms_path %><br>
           <%= link_to "Private Policy", policy_path %><br>
-
         </div>
         <!-- コピーライト -->
         <p>Copyright © 2016 Stylatte. All rights reserved.</p>
-
-
       </div>
 
     </div>
