Design Changed(styliststartページのプライスリスト作った。)引用サイト；http://wegraphics.net/downloads/free-responsive-pricing-table/

--- a/app/views/static_pages/styliststart.html.erb
+++ b/app/views/static_pages/styliststart.html.erb
@@ -40,12 +40,68 @@
 
 
 <!-- プライスリスト -->
-プライスリスト
+<!-- デスクトップにダウンロード済みのFreeのテーブルから（http://wegraphics.net/downloads/free-responsive-pricing-table/） -->
 
+<section id="pricePlans">
+		<ul id="plans">
+			<li class="plan">
+				<ul class="planContainer">
+					<li class="title"><h2>Stylist</h2></li>
+					<li class="price"><p>Free</p></li>
+					<li>
+						<ul class="options">
+							<li>2x <span>option 1</span></li>
+							<li>Free <span>option 2</span></li>
+							<li>Unlimited <span>option 3</span></li>
+							<li>Unlimited <span>option 4</span></li>
+							<li>1x <span>option 5</span></li>
+						</ul>
+					</li>
+					<li class="button"><a href="#">Purchase</a></li>
+				</ul>
+			</li>
+
+			<li class="plan">
+				<ul class="planContainer">
+					<li class="title"><h2 class="bestPlanTitle">Stylist-Plus</h2></li>
+					<li class="price"><p class="bestPlanPrice">$20/month</p></li>
+					<li>
+						<ul class="options">
+							<li>2x <span>option 1</span></li>
+							<li>Free <span>option 2</span></li>
+							<li>Unlimited <span>option 3</span></li>
+							<li>Unlimited <span>option 4</span></li>
+							<li>1x <span>option 5</span></li>
+						</ul>
+					</li>
+					<li class="button"><a class="bestPlanButton" href="#">Purchase</a></li>
+				</ul>
+			</li>
+
+			<li class="plan">
+				<ul class="planContainer">
+					<li class="title"><h2>Stylist-Premium</h2></li>
+					<li class="price"><p>$30/<span>month</span></p></li>
+					<li>
+						<ul class="options">
+							<li>2x <span>option 1</span></li>
+							<li>Free <span>option 2</span></li>
+							<li>Unlimited <span>option 3</span></li>
+							<li>Unlimited <span>option 4</span></li>
+							<li>1x <span>option 5</span></li>
+						</ul>
+					</li>
+					<li class="button"><a href="#">Purchase</a></li>
+				</ul>
+			</li>
+		</ul> <!-- End ul#plans -->
+		<div id="credits">by <a href="http://wegraphics.net/">WeGraphics</a></div>
+	</section>
 
 <!-- スタイリストサインイン 選んだコースによって、（上のボタンで）出てくるフォームがかわる。）-->
 <h2>Become a stylist! or Upgrade a stylist status!</h2>
 <div class="container-fluid">
+
   ログイン済みのユーザーなら、Edit　profileが出てくる。
   ・You hava already account and use it?
   <!-- ステップ -->
@@ -83,7 +139,6 @@
               </div>
             </div>
   </div>
-
 
 
 <!-- よくある質問コーナー -->
