--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,3 @@
-＞＞users/editページはじまり。
-
 <h1>Edit profile</h1>
 
 <div class="gravatar_edit">
@@ -30,29 +28,72 @@
     <%= f.password_field :password_confirmation, class: 'form-control' %>
   </div>
 
-  <%= f.submit "Save changes", class: "ui button" %>
-
-<% end %>
-
+<!-- スタイリスト,チェックボックス-->
+<div class="grouped inline fields">
+  <div class="field">
+    <%= f.radio_button :stylist, true, class: 'ui radio checkbox' %> Become stylist
+  </div>
+  <div class="field">
+    <%= f.radio_button :stylist, false, class: 'ui radio checkbox' %> Quit stylist
+  </div>
 </div>
 
+<p><%= link_to "Upgrade Stylist status.", stylists_path %></p>
 
+<!-- More /アコーディオン/ 必ずulは入れること（custom.css操作）-->
 
-<!-- 必ずulは入れること（custom.cssにて操作）-->
     <div class="acodmenu">
         <label for="Panel20">
           <div class="active title">
             <i class="dropdown icon"></i>
-            More Details
+            Set More
           </div>
         </label>
         <input type="checkbox" id="Panel20" class="on-off" />
         <ul>
+
+          <!-- URL -->
           <div class="ui labeled input">
             <div class="ui label">
               http://
             </div>
             <input type="text" placeholder="mysite.com">
           </div>
+
+          <!-- country -->
+          <div class="ui labeled input">
+            <div class="ui label">
+              country
+            </div>
+            <input type="text" placeholder="mysite.com">
+          </div>
+
+          <!-- gender -->
+          <div class="ui labeled input">
+            <div class="ui label">
+              gender
+            </div>
+            <input type="text" placeholder="mysite.com">
+          </div>
+
+          <!-- Free text (showed on profile. eg: favorites) -->
+          <div class="ui labeled input">
+            <div class="ui label">
+              Free text
+            </div>
+            <input type="text" placeholder="mysite.com">
+          </div>
+
         </ul>
     </div>
+
+
+<!-- submit -->
+<div class="field">
+  <%= f.submit "Save changes", class: "ui blue basic button" %>
+</div>
+
+<% end %>
+
+
+</div>
