--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -40,5 +40,5 @@ Free, you can get advices from cool friends all over world.
 
   <% end %>
 </div>
-
+<p>I understand <a href="#"> Privacy Statement</a></p>
 This site uses cookies to store your preferences for site-specific language and display options.
