--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,29 +1,42 @@
 
 <!-- Stats -->
-  <% @user ||= current_user %>
-  <div class="stats">
-    <a href="<%= following_user_path(@user) %>">
-      <strong class="stat">
-        <%= @user.following.count %>
-      </strong>
-      following
-    </a>
-    <a href="<%= followers_user_path(@user) %>">
-      <strong class="stat">
-        <%= @user.followers.count %>
-      </strong>
-      followers
-    </a>
-    <a href="<%= posts_path(@user) %>">
-      <strong class="stat">
-        <%= @user.posts.count %>
-      </strong>
-      posts
-    </a>
+<% @user ||= current_user %>
 
+<div class="four ui basic mini buttons">
+
+  <div class="ui button">
     <strong class="stat">
-      <%= @user.favorite_scomments.count %>
-      <%= link_to "favorites", favorites_path(current_user) %>
-      <i class="heart icon"></i>
+      <%= @user.following.count %>
+      <%= link_to "following", following_user_path(current_user) %>
+      <i class="icon user"></i>
     </strong>
-  </div>
+  </a>
+</div>
+
+<div class="ui button">
+  <strong class="stat">
+    <%= @user.followers.count %>
+    <%= link_to "followers", followers_user_path(current_user) %>
+    <i class="icon user"></i>
+  </strong>
+</a>
+</div>
+
+<div class="ui button">
+  <strong class="stat">
+    <%= @user.posts.count %>
+    <%= link_to "posts", posts_path(current_user) %><br>
+    <i class="mail icon"></i>
+  </strong>
+</a>
+</div>
+
+<div class="ui button">
+  <strong class="stat">
+    <%= @user.favorite_scomments.count %>
+    <%= link_to "favorites", favorites_path(current_user) %>
+    <i class="heart icon"></i>
+  </strong>
+</div>
+
+</div>
