--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,20 +1,24 @@
 <% provide(:title, 'Reset password') %>
 <h1>Password reset</h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<div class="ui form">
+
     <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
       <%= hidden_field_tag :email, @user.email %>
 
+    <div class="field">
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
+    </div>
 
+    <div class="field">
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
+    </div>
 
-      <%= f.submit "Update password", class: "btn btn-primary" %>
+      <%= f.submit "Update password", class: "ui blue basic button" %>
     <% end %>
+
   </div>
-</div>
