--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,13 +1,17 @@
 <% provide(:title, "Forgot password") %>
-<h1>Forgot password</h1>
+<h1>Please enter your email address.</h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<div class="ui form">
+
     <%= form_for(:password_reset, url: password_resets_path) do |f| %>
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.submit "Submit", class: "btn btn-primary" %>
+    <div class="field">
+      <%= f.label :email %>
+      <%= f.email_field :email, class: 'form-control', placeholder: "joe@schmoe.com"  %>
+    </div>
+
+      <%= f.submit "Submit", class: "ui submit button" %>
+
     <% end %>
-  </div>
+
 </div>
