--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,12 @@
   <!-- ユーザーの自己紹介 -->
   <div class="ui card">
     <div class="userimg">
+      <!-- ラベル、スタイリストならステータスと共に変わる。 -->
+      <% if logged_in? && @user.stylist? %>
+        <a class="ui red left corner label">
+          <i class="heart icon"></i>
+        </a>
+      <% end %>
       <div class="image">
         <%= link_to image_tag("stylatte_50.png", alt: "STYLATTE"), root_path %>
       </div>
