スタイリストページを作った。（stylistanalysisページ）

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,8 @@
         <h4 class="ui header">How to use</h4>
         <div class="ui link list">
           <%= link_to "Help", help_path %><br>
-          <%= link_to "Become a stylist?", stylists_path %><br>
+          <%= link_to "Become a stylist?", styliststart_path %><br>
+          <%= link_to "Stylist Analize", stylistanalysis_path %><br>
           More info on SNS /
           <i class="facebook icon"></i><a href="https://www.facebook.com/Stylatte-335151873516229/" target="_blank">Facebook</a>
           <i class="twitter icon"></i><br>
