--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -78,7 +78,7 @@
                 <li><%= link_to "Log out", logout_path, method: "delete" %></li>
               <% else %>
               <li><%= link_to "Log in", login_path %></li>
-              <li><%= link_to "Become a stylist?", stylists_path %></li>
+              <li><%= link_to "Become a stylist?", styliststart_path %></li>
               <li><%= link_to "Help", help_path %></li>
               <% end %>
               <!-- 下１行なにかわからないが、ないと上の一番したのliがグレーになるから置いておく。 -->
