--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,10 @@
 ＞＞users/newページはじまり
 
-<h1>Sign up</h1>
-
-
 Free, you can get advices from cool friends all over world.
-<p>Want to become a stylist? <a href="#">3 steps</a>
-<br> more info here<a href="#"> Docs</a></p>
+<p>Info here.<%= link_to "FAQ", help_path %></p>
+<p>Want to become a stylist too? Here is the docs.<%= link_to "How to become a stylist", styliststart_path %></p>
 
+<h1>Sign up</h1>
 
 <div class="ui form">
   <%= form_for(@user) do |f| %>
@@ -17,6 +15,7 @@ Free, you can get advices from cool friends all over world.
       <%= render 'shared/error_messages', object: f.object %>
       <label>Name</label>
       <%= f.text_field :name, class: 'form-control' %>
+      <p>You can use nickname here, which is shown to other users and can be changed afterward on EditPage.</p>
     </div>
 
     <div class="field">
@@ -40,5 +39,5 @@ Free, you can get advices from cool friends all over world.
 
   <% end %>
 </div>
-<p>I understand <a href="#"> Privacy Statement</a></p>
+<p>I understand <%= link_to "Private Policy", policy_path %></p>
 This site uses cookies to store your preferences for site-specific language and display options.
