Design Changed(stats)

--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -68,6 +68,9 @@
 </div>
 
 <div class="ui green basic button">
+  <%= link_to "Sent Stylings", sent_path %>
+</div>
+<div class="ui green basic button">
   <%= link_to "To Stylist Analysis Page", stylistanalysis_path %>
 </div>
 
