Design Changed(stylistanalzsisページ)

--- a/app/views/static_pages/stylistanalysis.html.erb
+++ b/app/views/static_pages/stylistanalysis.html.erb
@@ -1,1 +1,11 @@
-stylistanalysisページ
+stylistanalysisページ＞＞
+
+<h2>My Styling Status</h2>
+Sum
+<i class="star icon"></i>
+<%= @total_rating %>
+
+
+Average
+<i class="star icon"></i>
+<%= @average_rating %>
