user/editページで、websiteとbioを入力できるようにした。またuser_infoページとuser/showページで入力内容が表示されるようにした。

--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -21,10 +21,11 @@
       <div class="header">
         <%= current_user.name %>
       </div>
-
-
       <div class="description">
-        #Matthew is an interior designer living in New York.#
+        <%= current_user.bio %>
+      </div>
+      <div class="right floated description">
+        <%= current_user.website %>
       </div>
 
     </div>
