--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -85,8 +85,12 @@
     </div>
     <p>Add a short description</p>
 
-
-
+<!-- ヘッダーの写真(アバターじゃない方のプロフィール写真) -->
+    <div class="field">
+      <i class="photo icon"></i>
+      <%= f.label :picture %>
+      <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
+    </div>
 
 
 
@@ -137,3 +141,12 @@
 
 
 </div>
+
+<script type="text/javascript">
+  $('#user_picture').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
