これも。ユーザー情報でイメージを表示できるようにした。（pictureの登録がないユーザーは、デフォルトがSTYLATTEのロゴ画像になる。）

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,7 @@
+/*******************************
+            User_infoのユーザー情報のカード
+*******************************/
+
 .userimg{
     position:relative;
     width:300px;
