--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,30 +6,33 @@
 <div class="four wide column">
   <!-- ユーザーの自己紹介 -->
   <div class="ui card">
-    <div class="userimg">
+    <div class="image">
       <!-- ラベル、スタイリストならステータスと共に変わる。 -->
       <% if logged_in? && @user.stylist? %>
         <a class="ui red left corner label">
           <i class="heart icon"></i>
         </a>
       <% end %>
-      <div class="image">
-        <%= link_to image_tag("stylatte_50.png", alt: "STYLATTE"), root_path %>
+
+      <!-- プロフィール写真 -->
+        <% if @user.picture %>
+          <%= image_tag @user.picture.url %>
+        <% end %>
+
       </div>
-      <span>
-        <%= gravatar_for @user %>
-      </span>
-    </div>
 
     <div class="content">
       <div class="header">
         <%= @user.name %>
+      <div class="right floated description">
+        <%= gravatar_for @user %>
+      </div>
       </div>
       <div class="description">
-        <%= current_user.bio %>
+        <%= @user.bio %>
       </div>
       <div class="right floated description">
-        <%= current_user.website %>
+        <%= @user.website %>
       </div>
     </div>
     <div class="extra content">
